# ChangeLog for www-apps/owncloud
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/owncloud/ChangeLog,v 1.52 2014/02/07 08:46:02 voyageur Exp $

  07 Feb 2014; Bernard Cafarelli <voyageur@gentoo.org> -owncloud-6.0.0a.ebuild:
  Remove vulnerable version, CVE-2014-1665

*owncloud-6.0.1 (22 Jan 2014)

  22 Jan 2014; Bernard Cafarelli <voyageur@gentoo.org>
  -owncloud-5.0.13-r1.ebuild, -owncloud-6.0.0.ebuild, +owncloud-6.0.1.ebuild:
  Version bump, drop some versions

*owncloud-5.0.14a (18 Dec 2013)

  18 Dec 2013; Bernard Cafarelli <voyageur@gentoo.org>
  +owncloud-5.0.14a.ebuild:
  Bugfix version bump for 5.x

*owncloud-6.0.0a (16 Dec 2013)

  16 Dec 2013; Bernard Cafarelli <voyageur@gentoo.org>
  owncloud-5.0.13-r1.ebuild, owncloud-6.0.0.ebuild, +owncloud-6.0.0a.ebuild:
  Version bump, bugfix release. Add arm keyword, thanks Andrius Štikonas
  <andrius@stikonas.eu> in bug #494106

*owncloud-6.0.0 (11 Dec 2013)

  11 Dec 2013; Bernard Cafarelli <voyageur@gentoo.org> +owncloud-6.0.0.ebuild:
  Version bump, see owncloud.org/six for the new features

  28 Nov 2013; Bernard Cafarelli <voyageur@gentoo.org> -owncloud-4.5.13.ebuild,
  -owncloud-5.0.9.ebuild, -owncloud-5.0.10.ebuild, -owncloud-5.0.11.ebuild,
  -owncloud-5.0.12.ebuild:
  Remove old versions, security bug #492786

*owncloud-5.0.13-r1 (14 Nov 2013)

  14 Nov 2013; Bernard Cafarelli <voyageur@gentoo.org> -owncloud-5.0.13.ebuild,
  +owncloud-5.0.13-r1.ebuild:
  Tarball was modified after the packaging mailing list announce, bumping to
  -r1 to force update. Thanks cyberbat in bug #490708

*owncloud-5.0.13 (06 Nov 2013)

  06 Nov 2013; Bernard Cafarelli <voyageur@gentoo.org> +owncloud-5.0.13.ebuild:
  Version bump

*owncloud-5.0.12 (04 Oct 2013)

  04 Oct 2013; Bernard Cafarelli <voyageur@gentoo.org> +owncloud-5.0.12.ebuild:
  Version bump

*owncloud-5.0.11 (10 Sep 2013)

  10 Sep 2013; Bernard Cafarelli <voyageur@gentoo.org> +owncloud-5.0.11.ebuild: