@@ -8,7 +8,7 @@ KEYWORDS=~amd64 ~arm ~x86
 LICENSE=AGPL-3
 RDEPEND=|| ( >=dev-lang/php-5.4.9[curl?,filter,gd,hash,json,mysql?,pdo,postgres?,simplexml,sqlite?,xmlwriter,zip] sqlite? ( <dev-lang/php-5.4.9[curl?,filter,gd,hash,json,mysql?,pdo,postgres?,simplexml,sqlite3,xmlwriter,zip] ) !sqlite? ( <dev-lang/php-5.4.9[curl?,filter,gd,hash,json,mysql?,pdo,postgres?,simplexml,xmlwriter,zip] ) ) virtual/httpd-php >=app-admin/webapp-config-1.50.15
 REQUIRED_USE=|| ( mysql postgres sqlite )
-SLOT=5.0.14a
-SRC_URI=http://download.owncloud.org/community/owncloud-5.0.14a.tar.bz2 -> owncloud-5.0.14a.tar.bz2
+SLOT=6.0.2
+SRC_URI=http://download.owncloud.org/community/owncloud-6.0.2.tar.bz2 -> owncloud-6.0.2.tar.bz2
 _eclasses_=depend.php	df169a364e191b840b695604097e3c21	eutils	40081e8c7e7f7c4f9db349a1d6d52925	multilib	fac675dcccf94392371a6abee62d909f	phpconfutils	e108303831029e5b8a9d24b991b1d62a	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	webapp	25b9b1696f5e698711f47d45c3d45e3e
-_md5_=96cf395d563b8e1338cceef7ba9661ea
+_md5_=0f9875bfaabb1553cae56fef4a3238c3
