@@ -1,16 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST owncloud-5.0.14a.tar.bz2 15279560 SHA256 8b16f11c7dbf2f0f5e65fcbba34ed554fcdaabbf9e8ddc9ddd49c8aeedfbd619 SHA512 f4bf66a51c3986f7a6d16d270bc76ddc66b5a429bd73323b0beebd184306a1240314340936bb6213e0fb5198760563d0d84b520bdfbc71677536688d48233872 WHIRLPOOL 36bdce5358c8b3bd9e1771e7116fcb71f4b5402fb32a2020ed54d9475ce9601d98c48cc539fd7a157c529767534e487d1af73c15e3d99196f4ce25e83f28d4a5
-DIST owncloud-6.0.1.tar.bz2 48617092 SHA256 85ca7e30202a0f8a6162015a02ae5c488e0c0d2bd0c23991148e58a2b16cd977 SHA512 e1779f3768f4954a7037a469fb7ef15d5699e7654b2b11c4518fb8f7731fc41036a061685606769fa631ed313ee3335babc52158ba7402a0c276386d4be555b0 WHIRLPOOL 5a6617b8b33294d65a4e8f774cc1cdd62d2984469bac4eb18b0ecc21f8fb46b5c4d1baec1bd7a8182ac8137eb6131fe61ff70e5c57eecee8774bb0859149d082
-EBUILD owncloud-5.0.14a.ebuild 1430 SHA256 d2a64b90be62a89636058fe1fbe844d14531a40f74df7b0f63440958fc5ff9c8 SHA512 41a4899fe5611e92aa0cea8db474c76d22131e5c90aa855061e24d308058253faac1fc10a5a87f8c17b26d5b3bfe333bc9915598a85cb23f3fab96daf6efa74c WHIRLPOOL f17d339ad72de56bb4848f02778d2c9abbad06e4f9a45e1dfd9965f49eb7594a5f308cc9d949d2b1ff0d7c6528374b0f650f6f7fc84b99d273fd8d7be6a0f366
-EBUILD owncloud-6.0.1.ebuild 1376 SHA256 1413e1981bf44322973df6c9bea944059232a982f924d7cdb06ed394ba2f7698 SHA512 9888c7215c66a61168330988038b6a162b16469ddc5c8969c865887856908cb3024bfbeb4660364944f34bb4cd227abadf72cac1fb84552d5438061787750142 WHIRLPOOL f453192350fa12b182d24539abb3f45b032f2a77f9e35f32b2184704cf66e07ab99c0de156ad57eb8db92fea64a2a5915fde46f47194a29354421d700080574c
-MISC ChangeLog 11140 SHA256 31adb0312478efabff00f6eb3ba66d1503e4bc6a501edff2998794a5500c212c SHA512 8fa66c1d97ba3a0ab6e71108ced5c57ac8b8ebffbc07c5d062bd6f012c40d47088ef12dc9f7a930013a81c311db5686679f8566613ecf1234fbd9317dfdf26f3 WHIRLPOOL 3479740756c56de3faf8a5d92ed12e165b64e8be4451ec94e4880b12a72411fce08b171d5f98970b3247ec1016f0b3d867541f301d2c6a63c8c74182af7ad9b7
+DIST owncloud-5.0.15.tar.bz2 10632548 SHA256 363cd7b32b5ac58647f55cd73219722fd3849c9f41001081e1e4ff693234e8d1 SHA512 ee87f15eb15b546734d4f4ec99d83fe7d635113c537692073affa7ced29464df049901701b1fb7ad67e3c17549c2b8d1b5dedf6c3d972b50e028190e41c58434 WHIRLPOOL c7673ccd89e41e3b57ac60ad120546c2f38a000088e70623ac80ba96e9e0ad69d50f8bb95a17c56fa65c85d166988d3cc351405ecd2d8ff4c41acc751d2f930f
+DIST owncloud-6.0.2.tar.bz2 51422893 SHA256 a5a194ad07fca7cbf158b660cc098c6364590bdd15d086069221faf4386b713f SHA512 8a603e3a7cc16a8e4951f0c9ad8919cea04c9cefe1d90db1ee377a51011c0604bed6c620d59e83650e557f89acba2d86060e6238b1f96023dae473d8e63cfa0f WHIRLPOOL 4fa9f0fd6981fcf211e3f39ce525c96c2e08ab25fc2ea44ed11b0cf643bf46893c2c18fc8aff85cc62c6b56d0881d110458dfba9295fa9533e8d561eaa2d5d00
+EBUILD owncloud-5.0.15.ebuild 1429 SHA256 55dd3006a33efd98ecea07dd7f9d89454571a6e357caa4bf1bf24dcd9a05964a SHA512 db2ae53d0e352208a7b34ce0bd597d978a0f174815efe63d7d27b722ffb512d1d4789d273ee87eb708d3cae856942d96a275f3a6bb6a418ecca8d8a578a87217 WHIRLPOOL 643a5a78dbb26cfd83bed98e30848e0d9a8c32727fca5b50d39be18a7538289c8b496855476101db612cfdaf79f820c5d673df70b742e26084eb62505e54e2c7
+EBUILD owncloud-6.0.2.ebuild 1376 SHA256 e12aea28c795b67d8118ad8d8cc552380aafcd76edc1c24ad1981b30a4fe9a9a SHA512 5a9e06a4ba3e178331c91723818d72be4cd108f88683152b4eaa80596929b5177f45a05016f78a5be9b261b20ec0a669bf61dda8def4322e777bd74526c2c54e WHIRLPOOL e7b0b224c2d745aa188d24c0ac1d9f4904cdc971011df90e1aba48be65670e221d1c557390dfaacb86152ff5d32bec3dc3b21b4391b5b4122733a5f3bcafd41f
+MISC ChangeLog 11423 SHA256 818982be6569a986613db22aa95f9aa8e1804ec8fbb75ee701a765a35a19afa5 SHA512 ea03f5411f5511b2308c93811f142b3feed1292552308ed954bbd2efc2c3e413f317180809653bc9e9384fe8e82765f9db3d8215c12a6d3299202a2c24540a0c WHIRLPOOL 367d485d620f77d1266914abfee8b3d5198d4e9324207700fd5c0d770de748f79fbeb8b9482e2722049a96b5433b18d4fbaeb91be85fdeb048fd99d1fb84dea9
 MISC metadata.xml 356 SHA256 cb49246e6020c85fe4b611009db08f570d538d7d4bc6545d5926a43e0231d4e7 SHA512 ac6f6d02f173bc99208124a0bf5046e97cd81573f62f7a1f49de2bb39e8c429ceff7f4f4fb12f0aa8d688258a7ba05f748c875632f0160c24a86e9847b557779 WHIRLPOOL c89736bc7c47ee0b3c1ce80437f749e7f3d5b8060430824ba6a255af8aad6896ac379b4590e23af0b49c11938e1f41f0fd39565fe0ab0deef9a44bd751d08a64
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iF4EAREIAAYFAlL0nVAACgkQFYEBGcdFJfJEfwD/bLk/0THlxEEUvxWO8hfG063L
-gic+H72mg5W7XL8I8eMA/RUu/q4joq3TBhrXCqwAna3Zkg9SWT6Z4F8WqZSJSp/f
-=QF/b
+iF4EAREIAAYFAlMVlE8ACgkQFYEBGcdFJfI77wD7BHc01O8G9shktTZGXtXiWz5q
+5cNliE5aFOEjEvEAD4wA/ikAzT3YBJ0BKmtsHL5T5ZTJWauScu8YsvY+gDgYwvqe
+=V3ou
 -----END PGP SIGNATURE-----
