@@ -1,6 +1,14 @@
 # ChangeLog for www-apps/owncloud
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/owncloud/ChangeLog,v 1.52 2014/02/07 08:46:02 voyageur Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/owncloud/ChangeLog,v 1.53 2014/03/04 08:52:25 voyageur Exp $
+
+*owncloud-6.0.2 (02 Mar 2014)
+*owncloud-5.0.15 (02 Mar 2014)
+
+  02 Mar 2014; Bernard Cafarelli <voyageur@gentoo.org>
+  -owncloud-5.0.14a.ebuild, +owncloud-5.0.15.ebuild, -owncloud-6.0.1.ebuild,
+  +owncloud-6.0.2.ebuild:
+  Version bumps, remove old versions per security bug #502970
 
   07 Feb 2014; Bernard Cafarelli <voyageur@gentoo.org> -owncloud-6.0.0a.ebuild:
   Remove vulnerable version, CVE-2014-1665
